# SuperMarioKartMaker

./: CMakeLists.txt  Contributing.md  Readme.md
Source/: CMakeLists.txt
Source/Common/: CMakeLists.txt  DataChunk.cpp  DataChunk.hpp  Observable.cpp  Observable.hpp  Property.hpp  Version.hpp.in
Source/Core/: CMakeLists.txt  Callbacks.cpp  Callbacks.hpp  Core.cpp  Core.hpp  Project.cpp  Project.hpp
Source/UI/: CMakeLists.txt  CoreCallbacks.cpp  CoreCallbacks.hpp  MainWindow.cpp  MainWindow.hpp  MenuBar.cpp  MenuBar.hpp  main.cpp
Source/UI/Editor/: AbstractEditor.cpp  AbstractEditor.hpp  EditorBar.cpp  EditorBar.hpp  EditorContainer.cpp  EditorContainer.hpp  EditorManager.cpp  EditorManager.hpp  PropertyEditorPane.cpp  PropertyEditorPane.hpp
Source/UI/Editor/Private/: EditorContainerSplitter.cpp  EditorContainerSplitter.hpp  PropertyEditorWidgets.cpp  PropertyEditorWidgets.hpp
Source/UI/Editor/SMKM/: Editors.cpp  Editors.hpp  Outliner.cpp  Outliner.hpp  PropertiesEditor.cpp  PropertiesEditor.hpp
Source/UI/Wizard/: AbstractWizard.cpp  AbstractWizard.hpp
Source/UI/Wizard/Private/: AbstractWizardField.cpp  AbstractWizardField.hpp
Source/UI/Wizard/SMKM/: ProjectWizard.cpp  ProjectWizard.hpp
