########################################
# General CMake setup
########################################

cmake_minimum_required(VERSION 3.11)

project(SuperMarioKartMaker VERSION 0.0.0)


########################################
# Add subdirectories
########################################

add_subdirectory(Deps)

add_subdirectory(Source)
